# market-today

./: .editorconfig  README.md  messenger.py  package-lock.json  package.json  pyproject.toml  requirements.txt  update_p2p.py
.github/workflows/: interest_rate_12.yml  pull_request.yml  send_chart_telegram.yml  suggest_vn30.yml  update_crypto_rsi.yml  update_fgi.yml  update_launchpool.yml  update_p2p.yml  update_tops.yml  update_vn30.yml  update_vnindex.yml
data/: interest_rates.csv  p2p.csv
src/: constants.py  graph.py  interest_rate.js  messenger.py  plot_interest_rate.py  save_interest_rate.ts  sendChartToTelegram.js  suggest_vn30.py  telegram.py  trading_view.py  update_crypto_rsi.py  update_fgi.py  update_gold.py  update_launchpool.py  update_p2p.py  update_tops.py  update_vn30.py  update_vnindex.py  utils.py
src/clients/: __init__.py  base.py  binance.py  bybit.py  coinmarketcap.py  commodities.py  dnse.py  utils.py  vci.py  yahoo.py
src/dtos/: __init__.py  base.py  bybit.py  fgi.py  ticker.py  tops.py
src/pandas_ta/: __init__.py
src/pandas_ta/overlap/: __init__.py
src/pandas_ta/utils/: __init__.py
src/settings/: __init__.py
src/templates/: __init__.py  crypto_rsi.j2  fgi.j2  gold.j2  launchpool.j2  p2p.j2  top.j2  vn30.j2
templates/: __init__.py  p2p.j2
tests/clients/: test_coinmarketcap.py
