[project]
name = "market-today"
version = "0.1.0"
description = "Automatically send crypto notifications to Telegram using GitHub Actions."
authors = [
    {name = "Khiem Doan", email = "doankhiem.crazy@gmail.com"},
]

readme = "README.md"
license = {text = "GPL-3"}

requires-python = "==3.14.*"

dependencies = [
    "tzdata==2025.3",
    "loguru==0.7.3",
    "httpx[http2]==0.28.1",
    "tenacity==9.1.2",
    "fake-useragent==2.2.0",
    "pandas==2.3.3",
    "polars==1.37.1",
    "patito==0.8.5",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "Jinja2==3.1.6",
    "prettytable==3.17.0",
    "yfinance==1.0",
    "TA-Lib==0.6.8",
    "numpy==2.4.1",
]

[dependency-groups]
tools = [
]
testing = [
    "pytest",
    "pytest-asyncio",
]
linting = [
    "isort",
    "ruff",
]

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
