[project]
name = "market-today"
version = "0.1.0"
description = "Automatically send crypto notifications to Telegram using GitHub Actions."
authors = [
    {name = "Khiem Doan", email = "doankhiem.crazy@gmail.com"},
]

readme = "README.md"
license = {text = "GPL-3"}

requires-python = "==3.14.*"

dependencies = [
    "tzdata==2026.2",
    "loguru==0.7.3",
    "httpx[http2]==0.28.1",
    "niquests==3.18.8",
    "tenacity==9.1.4",
    "fake-useragent==2.2.0",
    "ua-generator==2.1.0",
    "pandas==3.0.3",
    "pandera[pandas]==0.31.1",
    "matplotlib==3.10.9",
    "seaborn==0.13.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "Jinja2==3.1.6",
    "prettytable==3.17.0",
    "yfinance==1.4.0",
    "TA-Lib==0.6.8",
]

[dependency-groups]
tools = [
]
testing = [
    "pytest",
    "pytest-asyncio",
]
linting = [
    "isort",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
